fix card on mobile

--- a/client/src/components/ProductCard/productCard.css
+++ b/client/src/components/ProductCard/productCard.css
@@ -56,3 +56,29 @@
     font-weight: 600 !important;
     font-size: 14px !important;
   }
+
+  @media only screen and (max-width: 768px) {
+
+    
+.productTitle {
+    font-size: 16px;
+    font-weight: 700;
+    padding-bottom: 10px;
+    margin-top: 0px;
+}
+
+.productDetails, .productDesc, .productCategory, .productQuantity {
+    font-size: 12px;
+    font-weight: 600;
+    margin: 0px;
+
+
+
+}
+#qtySelect {
+    font-size: 14px !important;
+}
+
+
+  }
+  
