--- a/client/src/components/UserCardContent/UserCardContent.css
+++ b/client/src/components/UserCardContent/UserCardContent.css
@@ -18,4 +18,6 @@
     box-shadow: none;
   }
 
-  
+  .productQuantity {
+    padding-top: 20px;
+  }
